fixed some layout issues in desktop mode

--- a/main_style.css
+++ b/main_style.css
@@ -257,3 +257,7 @@
   background-color: #6b9782;
   transform: scale(1.1);
 }
+
+.list_container {
+  padding: 40px;
+}
