--- a/mountain_style.css
+++ b/mountain_style.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -33,7 +39,7 @@ body {
   margin: 1rem auto;
   align-items: center;
   background-color: #ebebeb;
-  height: 1020px;
+  height: 100vh;
   /* background-color: red; */
 }
 
